dropshot/tests/fail/bad_server_only19.stderr
error: endpoint `bad_endpoint` must not specify `_dropshot_crate`
       note: specify this as an argument to `#[server]` instead
  --> tests/fail/bad_server_only19.rs:16:5
   |
16 |     #[endpoint { method = GET, path = "/test", _dropshot_crate = "dropshot" }]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: channel `bad_channel` must not specify `_dropshot_crate`
       note: specify this as an argument to `#[server]` instead
  --> tests/fail/bad_server_only19.rs:21:5
   |
21 |     #[channel { protocol = WEBSOCKETS, path = "/test", _dropshot_crate = "dropshot" }]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
